Updated Readme. Trying to fix button styling on iOS.

--- a/style.css
+++ b/style.css
@@ -82,6 +82,11 @@ main {
     justify-content: stretch;
 }
 
+#search-container:hover{
+    box-shadow: 0 1px 5px 0 #d2d2d2;
+    border-color: #FFF;
+}
+
 #search-icon {    
     display: inline-block;
     margin: 0;
@@ -99,6 +104,10 @@ main {
     font-size: 16px;
     flex-grow: 1;
     min-width: 32px;
+}
+
+input {
+    appearance: none;
 }
 
 input:focus {
